Fixed dropdown alignment etc

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2151,7 +2151,6 @@ hr {
             line-height: 1.5;
             letter-spacing: -0.35px;
             color: $middleGrey;
-            width: 200px;
             white-space: nowrap;
             text-overflow: ellipsis;
             overflow: hidden;
@@ -2163,11 +2162,14 @@ hr {
             @include justify-content(flex-start);
             @include align-items(center);
 
-            #waveform {
-              width: 230px;
-              padding-inline: 15px 25px;
-              opacity: 0.7;
-            }
+            // #waveform {
+            //   width: 230px;
+            //   padding-inline: 15px 25px;
+            //   opacity: 0.7;
+            //   wave {
+            //     overflow: hidden !important;
+            //   }
+            // }
           }
 
           .durationCount {
@@ -2267,7 +2269,7 @@ hr {
   cursor: default;
 
   &.artistName {
-    min-width: 26%;
+    min-width: 23%;
     @include flexbox;
     @include justify-content(flex-start);
     @include align-items(center);
@@ -2323,6 +2325,12 @@ hr {
     min-width: 19%;
     padding-inline: 15px 25px;
   }
+
+  // #waveform {
+  //   wave {
+  //     overflow: hidden !important;
+  //   }
+  // }
 
   &.duration {
     min-width: 10%;
@@ -5287,6 +5295,17 @@ input[type=number]::-webkit-outer-spin-button {
 
         &.controls {
           min-width: 26%;
+        }
+      }
+      .altVersions {
+        .versionTrackBody {
+          .versionTrackRow {
+            .filterVersion {
+              .waveTime {
+                display: none;
+              }
+            }
+          }
         }
       }
     }
